--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -63,6 +63,18 @@
         <item>Transparent</item>
     </string-array> 
 
+    <string-array name="values_transparent_notification_background">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
+    
+    <string-array name="entries_transparent_notification_background">
+        <item>Theme (default)</item>
+        <item>Custom Color</item>
+        <item>Transparent</item>
+    </string-array> 
+
     <string-array name="entries_status_bar_carrier_label" translatable="false">
 	<item>@string/ui_status_bar_carrier_label_use_default</item>
 	<item>@string/ui_status_bar_carrier_label_use_spn</item>
