--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -55,10 +55,12 @@
         <item>0</item>
         <item>1</item>
         <item>2</item>
+	<item>3</item>
     </string-array>
     
     <string-array name="entries_transparent_status_bar">
-        <item>Theme (default)</item>
+        <item>Theme</item>
+	<item>ROM</item>
         <item>Custom Color</item>
         <item>Transparent</item>
     </string-array> 
@@ -67,12 +69,16 @@
         <item>0</item>
         <item>1</item>
         <item>2</item>
+	<item>3</item>
+        <item>4</item>
     </string-array>
     
     <string-array name="entries_transparent_notification_background">
-        <item>Theme (default)</item>
+        <item>Theme</item>
+	<item>ROM</item>
         <item>Custom Color</item>
         <item>Transparent</item>
+	<item>Peeping Android</item>
     </string-array> 
 
     <string-array name="entries_status_bar_carrier_label" translatable="false">
