--- a/res/values/config.xml
+++ b/res/values/config.xml
@@ -19,7 +19,10 @@
     <bool name="has_dual_notification_led">false</bool>
 
     <!-- LED Flashlight -->
-    <bool name="has_led_flash">false</bool>
+    <bool name="has_led_flash">true</bool>
+
+    <!-- Auto Backlight -->
+    <bool name="light_decrease_enabled">true</bool>
 
     <!-- Whether or not to display search button settings -->
     <bool name="has_search_button">true</bool>
