--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -57,12 +57,12 @@
         <item>0</item>
         <item>1</item>
         <item>2</item>
-	<item>3</item>
+	    <item>3</item>
     </string-array>
     
     <string-array name="entries_transparent_status_bar">
         <item>Theme</item>
-	<item>ROM</item>
+	    <item>ROM</item>
         <item>Custom Color</item>
         <item>Transparent</item>
     </string-array> 
@@ -71,30 +71,32 @@
         <item>0</item>
         <item>1</item>
         <item>2</item>
-	<item>3</item>
+	    <item>3</item>
         <item>4</item>
+		<item>5</item>
     </string-array>
     
     <string-array name="entries_transparent_notification_background">
         <item>Theme</item>
-	<item>ROM</item>
+	    <item>ROM</item>
         <item>Custom Color</item>
         <item>Transparent</item>
-	<item>Peeping Android</item>
+	    <item>Peeping Android</item>
+		<item>Choose an Image</item>
     </string-array> 
 
     <string-array name="entries_status_bar_carrier_label" translatable="false">
-	<item>@string/ui_status_bar_carrier_label_use_default</item>
-	<item>@string/ui_status_bar_carrier_label_use_spn</item>
-	<item>@string/ui_status_bar_carrier_label_use_plmn</item>
-	<item>@string/ui_status_bar_carrier_label_use_custom</item>
+		<item>@string/ui_status_bar_carrier_label_use_default</item>
+		<item>@string/ui_status_bar_carrier_label_use_spn</item>
+		<item>@string/ui_status_bar_carrier_label_use_plmn</item>
+		<item>@string/ui_status_bar_carrier_label_use_custom</item>
     </string-array>
 
     <string-array name="values_status_bar_carrier_label" translatable="false">
-	<item>0</item>
-	<item>1</item>
-	<item>2</item>
-	<item>3</item>
+		<item>0</item>
+		<item>1</item>
+		<item>2</item>
+		<item>3</item>
     </string-array>
 
     <string-array name="entries_status_bar_am_pm">
